(Hopefully) stop column breaks inside sections
2-column format would break inside blocks. This should stop it: works in current Chrome and Firefox

--- a/lmfdb/inventory_app/templates/inv_style.css
+++ b/lmfdb/inventory_app/templates/inv_style.css
@@ -201,6 +201,12 @@ h2.link{
   column-count : 2;
 
 }
+.unbreaking{
+  -webkit-column-break-inside: avoid; /* Chrome, Safari */
+   page-break-inside: avoid;           /* Theoretically FF 20+ */
+   break-inside: avoid-column;         /* IE 11 */
+   display:table;
+}
 
 h2
 {
